; ModuleID = '/home/carl/AnghaBench/vlc/doc/libvlc/extr_vlc-thumb.c_snapshot.c'
source_filename = "/home/carl/AnghaBench/vlc/doc/libvlc/extr_vlc-thumb.c_snapshot.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@libvlc_MediaPlayerSnapshotTaken = common dso_local global i32 0, align 4
@callback = common dso_local global i32 0, align 4
@done = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [30 x i8] c"Snapshot has not been written\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, i8*)* @snapshot to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @snapshot(i32* %0, i32 %1, i8* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  store i8* %2, i8** %6, align 8
  %8 = load i32*, i32** %4, align 8
  %9 = call i32* @libvlc_media_player_event_manager(i32* %8)
  store i32* %9, i32** %7, align 8
  %10 = load i32*, i32** %7, align 8
  %11 = call i32 @assert(i32* %10)
  %12 = load i32*, i32** %7, align 8
  %13 = load i32, i32* @libvlc_MediaPlayerSnapshotTaken, align 4
  %14 = load i32, i32* @callback, align 4
  %15 = call i32 @libvlc_event_attach(i32* %12, i32 %13, i32 %14, i32* null)
  store i32 0, i32* @done, align 4
  %16 = load i32*, i32** %4, align 8
  %17 = load i8*, i8** %6, align 8
  %18 = load i32, i32* %5, align 4
  %19 = call i32 @libvlc_video_take_snapshot(i32* %16, i32 0, i8* %17, i32 %18, i32 0)
  %20 = call i32 @event_wait(i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str, i64 0, i64 0))
  %21 = load i32*, i32** %7, align 8
  %22 = load i32, i32* @libvlc_MediaPlayerSnapshotTaken, align 4
  %23 = load i32, i32* @callback, align 4
  %24 = call i32 @libvlc_event_detach(i32* %21, i32 %22, i32 %23, i32* null)
  ret void
}

declare dso_local i32* @libvlc_media_player_event_manager(i32*) #1

declare dso_local i32 @assert(i32*) #1

declare dso_local i32 @libvlc_event_attach(i32*, i32, i32, i32*) #1

declare dso_local i32 @libvlc_video_take_snapshot(i32*, i32, i8*, i32, i32) #1

declare dso_local i32 @event_wait(i8*) #1

declare dso_local i32 @libvlc_event_detach(i32*, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
